test/fail/25-match_deeper_wrong_num_params_toomany.perk
import "stdio.h"

type List =
    | Empty
    | Cons (int, List)

fun main(): void {
    let l : List = Cons(10, Cons(20, Empty));

    match (l) {
        Cons(_, Cons(`{20}, _, _)) {
            printf("Banana");
        },
        _ {
            printf("Not Banana");
        }
    }
}